// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.participant.protocol.v30;

import "com/digitalasset/canton/participant/protocol/v30/ledger_sync_event.proto";
import "google/protobuf/empty.proto";
import "scalapb/scalapb.proto";

message SubmissionTrackingData {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StorageProtoVersion";

  // using a oneof as an extension point for other tracking types in the future
  oneof tracking {
    TransactionSubmissionTrackingData transaction = 1;
  }
}

message TransactionSubmissionTrackingData {
  com.digitalasset.canton.participant.protocol.v30.CompletionInfo completion_info = 1;
  RejectionCause rejection_cause = 2;
  string domain_id = 3;

  message RejectionCause {
    oneof cause {
      google.protobuf.Empty timeout = 1;
      com.digitalasset.canton.participant.protocol.v30.CommandRejected.GrpcRejectionReasonTemplate rejection_reason_template = 2;
    }
  }
}
